--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/the-skinny.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>⚖️ The Skinny: How DEI Leaves Out the Most Visible People</h2>
+      <p class="card-date">July 21, 2025</p>
+      <p class="card-excerpt">
+       DEI talks the talk, but fat folks still walk alone &mdash; ignored, excluded, and judged. The most visible people in the room remain invisible to the movement.
+      </p>
+    </article>
+  </a>
    <a href="posts/working-as-intended.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
@@ -84,16 +94,6 @@
       <p class="card-date">July 14, 2025</p>
       <p class="card-excerpt">
        I just wanted to get online and do my job. What followed was a perfect cascade of failure &mdash; from my ISP to my phone carrier to my employer’s trustless IT policies. This isn’t broken infrastructure. It’s working <em>exactly</em> as designed.
-      </p>
-    </article>
-  </a>
-   <a href="posts/project-catharsis.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>Project Catharsis: How OpenAI Could Turn Frustration Into Function</h2>
-      <p class="card-date">July 13, 2025</p>
-      <p class="card-excerpt">
-       OpenAI needs money. Users need a better way to be heard. Project Catharsis is a feature concept that delivers both. It lets ChatGPT users opt in to share rants (or raves) about the brands they already talk about &mdash; while OpenAI turns that raw, emotional data into high-value insights companies will actually pay for. It’s ethical, scalable, and already halfway happening in chat. All it needs now is a name, a toggle, and a team willing to build it.
       </p>
     </article>
   </a>
