--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/burnout-economy.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>🔥💰 Welcome to the Burnout Economy</h2>
+      <p class="card-date">July 23, 2025</p>
+      <p class="card-excerpt">
+       For those of you who weren’t around in the Before Times™ &mdash; when pensions were a thing and loyalty actually meant something &mdash; let me break it to you gently:<br />
+       It hasn’t always been this broken.<br />
+       Today’s corporate system doesn’t just fail to value humans &mdash; it actively punishes companies that try. Stock price didn’t go up this quarter? Cue the layoffs. The system wasn’t built for people.<br />
+       It was built for capital.<br />
+       And my grandma, who just asked why that’s considered normal, sees through it better than most CEOs ever will.
+      </p>
+    </article>
+  </a>
    <a href="posts/the-skinny.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
@@ -84,16 +98,6 @@
       <p class="card-date">July 17, 2025</p>
       <p class="card-excerpt">
        What happens when you critique the system under a pseudonym? LinkedIn made sure I found out. A case study in platform control and algorithmic silencing.
-      </p>
-    </article>
-  </a>
-   <a href="posts/broken-system.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>The System Isn’t Broken &mdash; It’s Just Designed to Break You</h2>
-      <p class="card-date">July 14, 2025</p>
-      <p class="card-excerpt">
-       I just wanted to get online and do my job. What followed was a perfect cascade of failure &mdash; from my ISP to my phone carrier to my employer’s trustless IT policies. This isn’t broken infrastructure. It’s working <em>exactly</em> as designed.
       </p>
     </article>
   </a>
