--- a/posts.html
+++ b/posts.html
@@ -49,6 +49,17 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/no-warrant_no-problem.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>🚨 No Warrant? No Problem.</h2>
+      <p class="card-date">July 26, 2025</p>
+      <p class="card-excerpt">
+       TV keeps showing us cops who break the rules and kick in doors like due process is just a pesky suggestion. That fantasy isn’t harmless. It’s training us.<br />
+       If you’ve ever thought, <em>“Well, they must’ve had a reason to bust down that door,”</em> &mdash; this post is for you.
+      </p>
+    </article>
+  </a>
    <a href="posts/burnout-economy.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
