--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta name="author" content="Jenifer Jorgenson">
-  <title>SNARK FLOATS | About Snark Floats
-  </title>
+  <title>SNARK FLOATS | About Snark Floats</title>
+ <link rel="canonical" href="https://www.snarkfloats.com/about.html">
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
   <link href="style.css" rel="stylesheet"/>
