--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta name="author" content="Jenifer Jorgenson">
   <title>SNARK FLOATS</title>
+  <link rel="canonical" href="https://www.snarkfloats.com/index.html">
   <link href="style.css" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
