--- a/snarklevision.html
+++ b/snarklevision.html
@@ -17,8 +17,8 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta name="author" content="Jenifer Jorgenson">
-  <title>SNARK FLOATS | Snarklevision Presents...
-  </title>
+  <title>SNARK FLOATS | Snarklevision Presents...</title>
+  <link rel="canonical" href="https://www.snarkfloats.com/snarklevision.html">
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
   <link href="style.css" rel="stylesheet"/>
