--- a/success.html
+++ b/success.html
@@ -3,8 +3,8 @@
  <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>SNARK FLOATS | Thanks!
-  </title>
+  <title>SNARK FLOATS | Thanks!</title>
+  <link rel="canonical" href="https://www.snarkfloats.com/success.html">
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
   <link href="style.css" rel="stylesheet"/>
