--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/tldr-we-stopped-thinking.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>🧠 TL;DR: We Stopped Thinking</h2>
+      <p class="card-date">July 29, 2025</p>
+      <p class="card-excerpt">
+       TL;DR used to mean “too long; didn’t read.”<br />
+       Now it means “too hard; didn’t think.”<br />
+       If our attention span is shorter than a goldfish’s and we’re letting AI do our thinking, what’s left of us?
+      </p>
+    </article>
+  </a>
    <a href="posts/no-warrant_no-problem.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
@@ -90,16 +102,6 @@
       <p class="card-date">July 21, 2025</p>
       <p class="card-excerpt">
        DEI talks the talk, but fat folks still walk alone &mdash; ignored, excluded, and judged. The most visible people in the room remain invisible to the movement.
-      </p>
-    </article>
-  </a>
-   <a href="posts/working-as-intended.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>Still Working as Intended. More Broken Than Ever.</h2>
-      <p class="card-date">July 18, 2025</p>
-      <p class="card-excerpt">
-       Part 3 of a reluctant trilogy about modern systems and the humans they grind down. And the personal cost of being trapped by the system.
       </p>
     </article>
   </a>
