--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <p class="card-date">July 29, 2025</p>
       <p class="card-excerpt">
        TL;DR used to mean “too long; didn’t read.”<br />
-       Now it means “too hard; didn’t think.”<br />
-       If our attention span is shorter than a goldfish’s and we’re letting AI do our thinking, what’s left of us?
+       Now it means “too hard; didn’t think.”</p>
+       <p>If our attention span is shorter than a goldfish’s and we’re letting AI do our thinking, what’s left of us?
       </p>
     </article>
   </a>
