--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
       <h2>🧠 TL;DR: We Stopped Thinking</h2>
       <p class="card-date">July 29, 2025</p>
       <p class="card-excerpt">
-       TL;DR used to mean “too long; didn’t read.”  Now it seems to mean “too complicated; didn’t think.”</p>
-       <p>
+        TL;DR used to mean “too long; didn’t read.”  Now it seems to mean “too complicated; didn’t think.”<br />
         If our attention span is shorter than a goldfish’s and we’re letting AI do all our thinking, what’s left of us?
       </p>
     </article>
