--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       <p class="card-date">July 29, 2025</p>
       <p class="card-excerpt">
         TL;DR used to mean “too long; didn’t read.”  Now it seems to mean “too complicated; didn’t think.”<br />
-        If our attention span is shorter than a goldfish’s and we’re letting AI do all our thinking, what’s left of us?
+        If our attention span is shorter than a goldfish’s and we’re letting AI do all our thinking, what’s left of us?<br /><br />
+        Our obsession with brevity is killing critical thinking &mdash; and we need to fight for the full thought process.
       </p>
     </article>
   </a>
