--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
    </p>
   </section>
   <main class="card-container">
-   <a href="posts/no-warrant_no-problem.html" class="card-link">
+   <a href="posts/tldr-we-stopped-thinking.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
-      <h2>🚨 No Warrant? No Problem.</h2>
-      <p class="card-date">July 26, 2025</p>
+      <h2>🧠 TL;DR &mdash; We Stopped Thinking</h2>
+      <p class="card-date">July 29, 2025</p>
       <p class="card-excerpt">
-       TV keeps showing us cops who break the rules and kick in doors like due process is just a pesky suggestion. That fantasy isn’t harmless. It’s training us.<br />
-       If you’ve ever thought, <em>“Well, they must’ve had a reason to bust down that door,”</em> &mdash; this post is for you.
+       TL;DR used to mean “too long; didn’t read.”  Now it seems to mean “too complicated; didn’t think.”<br />
+        If our attention span is shorter than a goldfish’s and we’re letting AI do all our thinking, what’s left of us?<br />
+       <br />
+        Our obsession with brevity is killing critical thinking &mdash; and we need to fight to keep using our full thought processes.
       </p>
     </article>
   </a>
