--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
    </p>
   </section>
   <main class="card-container">
-   <a href="posts/tldr-we-stopped-thinking.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>🧠 TL;DR &mdash; We Stopped Thinking</h2>
-      <p class="card-date">July 29, 2025</p>
-      <p class="card-excerpt">
-       TL;DR used to mean “too long; didn’t read.” Now it seems to mean “too complicated; didn’t think.”<br />
-       If our attention span is shorter than a goldfish’s and we’re letting AI do all our thinking, what’s left of us?<br />
-       <br />
-       Our obsession with brevity is killing critical thinking — and we need to fight for the full thought process.
-      </p>
-    </article>
-  </a>
+<a href="posts/tldr-we-stopped-thinking.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>TL;DR: We Stopped Thinking</h2>
+    <p class="card-date">July 29, 2025</p>
+    <p class="card-excerpt">
+      TL;DR used to mean “too long; didn’t read.” Now it seems to mean “too complicated; didn’t think.”<br />
+      If our attention span is shorter than a goldfish’s and we’re letting AI do all our thinking, what’s left of us?<br />
+      <br />
+      Our obsession with brevity is killing critical thinking &mdash; and we need to fight for the full thought process.
+    </p>
+  </article>
+</a>
    <a href="posts/no-warrant_no-problem.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
