--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
     <h2>TL;DR: We Stopped Thinking</h2>
     <p class="card-date">July 29, 2025</p>
     <p class="card-excerpt">
-      This is a test.
+      TL;DR used to mean “too long; didn’t read.” Now it seems to mean “too complicated; didn’t think.”<br />
+      If our attention span is shorter than a goldfish’s and we’re letting AI do all our thinking, what’s left of us?<br />
+      <br />
+      Our obsession with brevity is killing critical thinking &mdash; and we need to fight for the full thought process.
     </p>
   </article>
 </a>
