--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <a href="posts/tldr-we-stopped-thinking.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
-    <h2>TL;DR: We Stopped Thinking</h2>
+    <h2>🧠 TL;DR &mdash; We Stopped Thinking</h2>
     <p class="card-date">July 29, 2025</p>
     <p class="card-excerpt">
       TL;DR used to mean “too long; didn’t read.” Now it seems to mean “too complicated; didn’t think.”<br />
