--- a/posts.html
+++ b/posts.html
@@ -55,7 +55,7 @@
     <h2>🫀🧠 Shame Doesn't Win Hearts and Minds</h2>
     <p class="card-date">August 7, 2025</p>
     <p class="card-excerpt">
-      So when we publicly shame the people who made the fatal &mdash; and yes, nearly inexcusable &mdash; mistake of voting for Donald Trump (a second time), all we’re doing is reinforcing their commitment. Not necessarily because they still believe every lie he tells, but because it’s psychologically easier to double down than admit you were duped. To admit you were a sucker. Especially when everyone’s pointing and saying, “I told you so.”<br />
+      When we publicly shame the people who made the fatal mistake of voting for Donald Trump (a second time), all we’re doing is reinforcing their commitment. Not necessarily because they still believe every lie he tells, but because it’s psychologically easier to double down than admit you were duped. To admit you were a sucker. Especially when everyone’s pointing and saying, “I told you so.”<br />
      Mockery feels good. I bet change would feel better...
     </p>
   </article>
