--- a/index.html
+++ b/index.html
@@ -58,7 +58,18 @@
    </p>
   </section>
   <main class="card-container">
-<a href="posts/tldr-we-stopped-thinking.html" class="card-link">
+<a href="posts/shame-doesnt-win-hearts-and-minds.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>🫀🧠 Shame Doesn't Win Hearts and Minds</h2>
+    <p class="card-date">August 7, 2025</p>
+    <p class="card-excerpt">
+      When we publicly shame the people who made the fatal mistake of voting for Donald Trump (a second time), all we’re doing is reinforcing their commitment. Not necessarily because they still believe every lie he tells, but because it’s psychologically easier to double down than admit you were duped. To admit you were a sucker. Especially when everyone’s pointing and saying, “I told you so.”<br />
+     Mockery feels good. I bet change would feel better...
+    </p>
+  </article>
+</a>
+ <a href="posts/tldr-we-stopped-thinking.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
     <h2>🧠 TL;DR &mdash; We Stopped Thinking</h2>
@@ -93,16 +104,6 @@
        Today’s corporate system doesn’t just fail to value humans &mdash; it actively punishes companies that try. Stock price didn’t go up this quarter? Cue the layoffs. The system wasn’t built for people.<br />
        It was built for capital.<br />
        And my grandma, who just asked why that’s considered normal, sees through it better than most CEOs ever will.
-      </p>
-    </article>
-  </a>
-   <a href="posts/the-skinny.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>⚖️ The Skinny: How DEI Leaves Out the Most Visible People</h2>
-      <p class="card-date">July 21, 2025</p>
-      <p class="card-excerpt">
-       DEI talks the talk, but fat folks still walk alone &mdash; ignored, excluded, and judged. The most visible people in the room remain invisible to the movement.
       </p>
     </article>
   </a>
