--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
    </p>
   </section>
   <main class="card-container">
-<a href="posts/shame-doesnt-win-hearts-and-minds.html" class="card-link">
+<a href="posts/being-yourself.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>🫵 What Ever Happened to Just Being Yourself?</h2>
+    <p class="card-date">August 17, 2025</p>
+    <p class="card-excerpt">
+      Once upon a time, social media promised connection. Now it demands performance. This post asks why being yourself stopped being enough &mdash; and what we’ve lost chasing likes.
+    </p>
+  </article>
+</a>
+ <a href="posts/shame-doesnt-win-hearts-and-minds.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
     <h2>🫀🧠 Shame Doesn't Win Hearts and Minds</h2>
