--- a/posts.html
+++ b/posts.html
@@ -49,6 +49,16 @@
    </p>
   </section>
   <main class="card-container">
+<a href="posts/integrity-revolution.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>Integrity is a Quiet Revolution</h2>
+    <p class="card-date">August 28, 2025</p>
+    <p class="card-excerpt">
+      From white horses and sworn oaths to vigilante billionaires and performative trauma, integrity has come a long way. The wrong way...
+    </p>
+  </article>
+</a>
 <a href="posts/being-yourself.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
