--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
    </p>
   </section>
   <main class="card-container">
+<a href="posts/integrity-revolution.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>Integrity is a Quiet Revolution</h2>
+    <p class="card-date">August 28, 2025</p>
+    <p class="card-excerpt">
+      From white horses and sworn oaths to vigilante billionaires and performative trauma, integrity has come a long way. The wrong way...
+    </p>
+  </article>
+</a>
 <a href="posts/being-yourself.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
@@ -92,17 +102,6 @@
     </p>
   </article>
 </a>
-   <a href="posts/no-warrant_no-problem.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>🚨 No Warrant? No Problem.</h2>
-      <p class="card-date">July 26, 2025</p>
-      <p class="card-excerpt">
-       TV keeps showing us cops who break the rules and kick in doors like due process is just a pesky suggestion. That fantasy isn’t harmless. It’s training us.<br />
-       If you’ve ever thought, <em>“Well, they must’ve had a reason to bust down that door,”</em> &mdash; this post is for you.
-      </p>
-    </article>
-  </a>
   </main>
   <hr>
   <section class="subscribe">
