--- a/substack/shared-threads.html
+++ b/substack/shared-threads.html
@@ -1,41 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>SNARK FLOATS | Thanks!</title>
-  <link rel="canonical" href="https://www.snarkfloats.com/success.html">
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <link rel="manifest" href="/site.webmanifest">
-  <link href="style.css" rel="stylesheet"/>
- </head>
- <body>
-<header class="site-header">
-  <div class="header-inner">
-    <div class="site-title-tagline">
-      <h1 class="site-title"><a href="/index.html">SNARK FLOATS</a></h1>
-      <span class="site-tagline">Sarcasm. Sanity. Survival.</span>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="/posts.html">Snarky Posts</a></li>
-        <li><a href="/about.html">About Snark</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-      </ul>
-    </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>In Loving Memory</title>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      background-color: #fff;
+      color: #222;
+      margin: 0;
+      padding: 2em;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.6;
+    }
+
+    h1 {
+      font-size: 2.5em;
+      text-align: center;
+      margin-bottom: 0.2em;
+    }
+
+    .dove {
+      text-align: center;
+      margin-bottom: 1em;
+    }
+
+    .dove img {
+      max-width: 100px;
+    }
+
+    .section {
+      margin-bottom: 2em;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    a {
+      color: #3366cc;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .donate-button {
+      display: inline-block;
+      background-color: #eee;
+      border: 1px solid #aaa;
+      border-radius: 6px;
+      padding: 0.6em 1.2em;
+      font-weight: bold;
+      font-size: 1.1em;
+      margin-top: 1em;
+      text-decoration: none;
+    }
+
+    .donate-button:hover {
+      background-color: #ddd;
+    }
+
+    .rose {
+      text-align: center;
+      margin: 1em 0;
+    }
+
+    .rose img {
+      max-width: 80px;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #111;
+        color: #ccc;
+      }
+
+      a {
+        color: #79a8ff;
+      }
+
+      .donate-button {
+        background-color: #333;
+        color: #fff;
+        border-color: #666;
+      }
+
+      .donate-button:hover {
+        background-color: #444;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="dove">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Peace_dove.svg/2048px-Peace_dove.svg.png" alt="Dove with olive branch">
   </div>
-</header>
-<section class="contact-section">
- <div class="contact-intro">
-   <img src="images/main/snarkmail.png" alt="Talk Snarky to Me art" />
-  <div class="contact-text">
-  <div class="container">
-    <h1>Thanks for sharing your thoughts!</h1>
-    <p>I'll take a look and get back to you if needed. Your snark has been safely delivered.</p>
-    <a href="/index.html">Return Home</a>
+
+  <h1>In Loving Memory</h1>
+
+  <div class="section">
+    <p>The families of Mira Chen, Rae Johnson, Dev Mehta, and Taylor Reed<br>
+    invite you to a joint memorial service honoring the lives of four lifelong friends,<br>
+    taken far too soon.</p>
+
+    <p><strong>Four lives. Four stories. One shared thread.</strong></p>
+
+    <p>We lost them too soon. But through your support, we can bring light to others.</p>
+
+    <p>Join us in giving the <a href="psych.html">gift of connection</a>.</p>
+
+    <p>Your donation helps provide tablets and digital devices to underprivileged children across the country —<br>
+    giving them access to education, friendship, and a world beyond their circumstances.</p>
   </div>
-  <footer class="site-footer">
-   <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
-  </footer>
- </body>
+
+  <div class="rose">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/White_rose_icon.svg/1024px-White_rose_icon.svg.png" alt="White rose">
+  </div>
+
+  <div class="section center">
+    <p><strong>A Joint Memorial Service will be held:</strong><br>
+    Sunday, October 13 · 3:00 PM<br>
+    Milltown Community Chapel, NY<br>
+    All are welcome to attend.</p>
+
+    <a href="psych.html" class="donate-button">Donate Now</a>
+  </div>
+
+  <div class="section">
+    <h3>Why We Give</h3>
+    <p>Mira, Rae, Dev, and Taylor believed in the power of technology to bring people together.<br>
+    In their memory, we’re building bridges — one device at a time.</p>
+  </div>
+
+</body>
 </html>
