--- a/substack/psych.html
+++ b/substack/psych.html
@@ -98,45 +98,11 @@
 </head>
 <body>
 
-  <div class="dove">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Peace_dove.svg/2048px-Peace_dove.svg.png" alt="Dove with olive branch">
-  </div>
-
-  <h1>In Loving Memory</h1>
+  <h1>PSYCH!</h1>
 
   <div class="section">
-    <p>The families of Mira Chen, Rae Johnson, Dev Mehta, and Taylor Reed<br>
-    invite you to a joint memorial service honoring the lives of four lifelong friends,<br>
-    taken far too soon.</p>
-
-    <p><strong>Four lives. Four stories. One shared thread.</strong></p>
-
-    <p>We lost them too soon. But through your support, we can bring light to others.</p>
-
-    <p>Join us in giving the <a href="psych.html">gift of connection</a>.</p>
-
-    <p>Your donation helps provide tablets and digital devices to underprivileged children across the country —<br>
-    giving them access to education, friendship, and a world beyond their circumstances.</p>
+    <p>It's just a story... 😝</p>
   </div>
-
-  <div class="rose">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/White_rose_icon.svg/1024px-White_rose_icon.svg.png" alt="White rose">
-  </div>
-
-  <div class="section center">
-    <p><strong>A Joint Memorial Service will be held:</strong><br>
-    Sunday, October 13 · 3:00 PM<br>
-    Milltown Community Chapel, NY<br>
-    All are welcome to attend.</p>
-
-    <a href="psych.html" class="donate-button">Donate Now</a>
-  </div>
-
-  <div class="section">
-    <h3>Why We Give</h3>
-    <p>Mira, Rae, Dev, and Taylor believed in the power of technology to bring people together.<br>
-    In their memory, we’re building bridges — one device at a time.</p>
-  </div>
-
+  
 </body>
 </html>
