--- a/substack/shared-threads.html
+++ b/substack/shared-threads.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Georgia, serif;
-      background-color: #fff;
+      background-color: #f9f9f9;
       color: #222;
       margin: 0;
       padding: 2em;
@@ -99,7 +99,7 @@
 <body>
 
   <div class="dove">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Peace_dove.svg/2048px-Peace_dove.svg.png" alt="Dove with olive branch">
+    <img src="images/shared-threads_dove.png" alt="Dove with olive branch">
   </div>
 
   <h1>In Loving Memory</h1>
@@ -120,12 +120,12 @@
   </div>
 
   <div class="rose">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/White_rose_icon.svg/1024px-White_rose_icon.svg.png" alt="White rose">
+    <img src="images/shared-threads_rose.png" alt="White rose">
   </div>
 
   <div class="section center">
     <p><strong>A Joint Memorial Service will be held:</strong><br>
-    Sunday, October 13 · 3:00 PM<br>
+    Friday, October 31 · 3:00 PM<br>
     Milltown Community Chapel, NY<br>
     All are welcome to attend.</p>
 
