--- a/substack/shared-threads.html
+++ b/substack/shared-threads.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>In Loving Memory</title>
+  <title>Memorial - milltown.ny.gov/obit/10-31-2025/give</title>
   <style>
     body {
       font-family: Georgia, serif;
@@ -74,9 +74,9 @@
       max-width: 80px;
     }
 
-    @media (prefers-color-scheme: dark) {
+    @media  {
       body {
-        background-color: #111;
+        background-color: #f9f9f9;
         color: #ccc;
       }
 
