--- a/substack/shared-threads.html
+++ b/substack/shared-threads.html
@@ -74,11 +74,11 @@
       max-width: 80px;
     }
 
-    @media  {
+   <!-- @media  {
       body {
         background-color: #f9f9f9;
         color: #ccc;
-      }
+      } -->
 
       a {
         color: #79a8ff;
