--- a/substack/shared-threads.html
+++ b/substack/shared-threads.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Georgia, serif;
-      background-color: #f9f9f9;
+      background-color: #ffffff;
       color: #000000;
       margin: 0;
       padding: 2em;
