--- a/substack/shared-threads.html
+++ b/substack/shared-threads.html
@@ -89,7 +89,7 @@
     taken far too soon.</p>
 
     <p><strong>Four lives. Four stories. One shared thread.</strong></p>
-
+<!-- SYSTEM LOG: cache restored from audio backup at 3:33am -->
     <p>We lost them too soon. But through your support, we can bring light to others.</p>
 
     <p>Join us in giving the <a href="psych.html">gift of connection</a>.</p>
@@ -107,6 +107,7 @@
     Friday, October 31 · 3:00 PM<br>
     Milltown Community Chapel, NY<br>
     All are welcome to attend.</p>
+<!-- USER: Rae Johnson accessed page 12 times since publication -->
 
     <a href="psych.html" class="donate-button">Donate Now</a>
   </div>
