--- a/posts.html
+++ b/posts.html
@@ -49,6 +49,16 @@
    </p>
   </section>
   <main class="card-container">
+<a href="posts/lowest-common-denominator.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>The Lowest Common Denominator</h2>
+    <p class="card-date">September 08, 2025</p>
+    <p class="card-excerpt">
+      Lowest common denominator thinking keeps us safe, bland, and forgettable. We can do better. If we stop settling...
+    </p>
+  </article>
+</a>
 <a href="posts/integrity-revolution.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
