--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
    </p>
   </section>
   <main class="card-container">
+<a href="posts/lowest-common-denominator.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>The Lowest Common Denominator</h2>
+    <p class="card-date">September 08, 2025</p>
+    <p class="card-excerpt">
+      Lowest common denominator thinking keeps us safe, bland, and forgettable. We can do better. If we stop settling...
+    </p>
+  </article>
+</a>
 <a href="posts/integrity-revolution.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
@@ -86,19 +96,6 @@
     <p class="card-excerpt">
       When we publicly shame the people who made the fatal mistake of voting for Donald Trump (a second time), all we’re doing is reinforcing their commitment. Not necessarily because they still believe every lie he tells, but because it’s psychologically easier to double down than admit you were duped. To admit you were a sucker. Especially when everyone’s pointing and saying, “I told you so.”<br />
      Mockery feels good. I bet change would feel better...
-    </p>
-  </article>
-</a>
- <a href="posts/tldr-we-stopped-thinking.html" class="card-link">
-  <article class="card blog-post">
-    <div class="badge gold">Snarky Post</div>
-    <h2>🧠 TL;DR &mdash; We Stopped Thinking</h2>
-    <p class="card-date">July 29, 2025</p>
-    <p class="card-excerpt">
-      TL;DR used to mean “too long; didn’t read.” Now it seems to mean “too complicated; didn’t think.”<br />
-      If our attention span is shorter than a goldfish’s and we’re letting AI do all our thinking, what’s left of us?<br />
-      <br />
-      Our obsession with brevity is killing critical thinking &mdash; and we need to fight for the full thought process.
     </p>
   </article>
 </a>
