--- a/posts.html
+++ b/posts.html
@@ -49,6 +49,16 @@
    </p>
   </section>
   <main class="card-container">
+<a href="posts/whitewashing-history.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>You Can’t Learn From the Past if You Erase It</h2>
+    <p class="card-date">September 14, 2025</p>
+    <p class="card-excerpt">
+      If we hide the ugly parts of history, we lose the ability to recognize prejudice when it reappears. You don’t defeat bigotry by burying it &mdash; you defeat it by facing it.
+    </p>
+  </article>
+</a>
 <a href="posts/lowest-common-denominator.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
