--- a/index.html
+++ b/index.html
@@ -56,8 +56,20 @@
     Life’s a mess. Snark floats.<br />
     Grab a seat if you can handle it. If not, there are plenty of other lifeboats out there padded with Pinterest quotes and toxic positivity. Good luck. You’ll need it.
    </p>
+   <p>You can also subscribe to my Substack to read my fiction.</p>
+   <p><iframe src="https://snarkfloats.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe></p>
   </section>
   <main class="card-container">
+<a href="posts/whitewashing-history.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>You Can’t Learn From the Past if You Erase It</h2>
+    <p class="card-date">September 14, 2025</p>
+    <p class="card-excerpt">
+      If we hide the ugly parts of history, we lose the ability to recognize prejudice when it reappears. You don’t defeat bigotry by burying it &mdash; you defeat it by facing it.
+    </p>
+  </article>
+</a>
 <a href="posts/lowest-common-denominator.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
@@ -85,17 +97,6 @@
     <p class="card-date">August 17, 2025</p>
     <p class="card-excerpt">
       Once upon a time, social media promised connection. Now it demands performance. This post asks why being yourself stopped being enough &mdash; and what we’ve lost chasing likes.
-    </p>
-  </article>
-</a>
- <a href="posts/shame-doesnt-win-hearts-and-minds.html" class="card-link">
-  <article class="card blog-post">
-    <div class="badge gold">Snarky Post</div>
-    <h2>🫀🧠 Shame Doesn't Win Hearts and Minds</h2>
-    <p class="card-date">August 7, 2025</p>
-    <p class="card-excerpt">
-      When we publicly shame the people who made the fatal mistake of voting for Donald Trump (a second time), all we’re doing is reinforcing their commitment. Not necessarily because they still believe every lie he tells, but because it’s psychologically easier to double down than admit you were duped. To admit you were a sucker. Especially when everyone’s pointing and saying, “I told you so.”<br />
-     Mockery feels good. I bet change would feel better...
     </p>
   </article>
 </a>
