--- a/posts.html
+++ b/posts.html
@@ -49,7 +49,17 @@
    </p>
   </section>
   <main class="card-container">
-<a href="posts/whitewashing-history.html" class="card-link">
+  <a href="posts/bread-circus.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>Bread & Circuses: 21st Century Edition</h2>
+    <p class="card-date">September 28, 2025</p>
+    <p class="card-excerpt">
+      Rome had gladiators, France had Versailles, and we’ve got DoorDash, Netflix, and billionaires in rocket ships. The distractions change, but the pattern doesn’t. Bread, circuses, and systemic rot &mdash; different flavors, same recipe.
+    </p>
+  </article>
+  </a>
+  <a href="posts/whitewashing-history.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
     <h2>You Can’t Learn From the Past if You Erase It</h2>
