--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
    </p>
   </section>
   <main class="card-container">
-<a href="posts/whitewashing-history.html" class="card-link">
+  <a href="posts/bread-circus.html" class="card-link">
+  <article class="card blog-post">
+    <div class="badge gold">Snarky Post</div>
+    <h2>Bread & Circuses: 21st Century Edition</h2>
+    <p class="card-date">September 28, 2025</p>
+    <p class="card-excerpt">
+      Rome had gladiators, France had Versailles, and we’ve got DoorDash, Netflix, and billionaires in rocket ships. The distractions change, but the pattern doesn’t. Bread, circuses, and systemic rot &mdash; different flavors, same recipe.
+    </p>
+  </article>
+  </a>
+  <a href="posts/whitewashing-history.html" class="card-link">
   <article class="card blog-post">
     <div class="badge gold">Snarky Post</div>
     <h2>You Can’t Learn From the Past if You Erase It</h2>
@@ -85,16 +95,6 @@
     <p class="card-date">August 28, 2025</p>
     <p class="card-excerpt">
       From white horses and sworn oaths to vigilante billionaires and performative trauma, integrity has come a long way. The wrong way...
-    </p>
-  </article>
-</a>
-<a href="posts/being-yourself.html" class="card-link">
-  <article class="card blog-post">
-    <div class="badge gold">Snarky Post</div>
-    <h2>🫵 What Ever Happened to Just Being Yourself?</h2>
-    <p class="card-date">August 17, 2025</p>
-    <p class="card-excerpt">
-      Once upon a time, social media promised connection. Now it demands performance. This post asks why being yourself stopped being enough &mdash; and what we’ve lost chasing likes.
     </p>
   </article>
 </a>
